--- a/index.html
+++ b/index.html
@@ -39,15 +39,9 @@
     </article>
   </main>
   
-
-
-  
-  
-  
-
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Styne</a>.
+    Coded by <a href="#" style="color: lime;">Styne</a>.
   </div>
 </body>
 </html>
